2007-05-05  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp ("loadrc"): wrap in with-restarts-menu
	("lastmsg"): handle case when there is no last message.
	("gmerge"): new command

	* stumpwm.lisp (load-rc-file): take new argument, catch-errors.
	(stumpwm): print *startup-message* when non-nil on start up.

	* primitives.lisp (*window-format*): crop title at 50 chars
	(*startup-message*): new defvar

2007-05-04  Shawn Betts  <sabetts@shitbender.gagrod>

	* primitives.lisp (format-expand): allow a numeric "prefix" that
	crops the argument's string length.

2007-05-04  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (add-window): call screen-add-mapped-window
	(restore-window): likewise
	(withdraw-window): call screen-remove-mapped-window
	(netwm-update-client-list): new function
	(screen-add-mapped-window): likewise
	(screen-remove-mapped-window): likewise
	(net-set-properties): set the _NET_CLIENT_LIST property

2007-05-03  Shawn Betts  <sabetts@vcn.bc.ca>

	* make-image.lisp: return error code 0 for sbcl
	set SBCL_HOME for sbcl.

	* Makefile: new file

	* user.lisp ("reload"): don't call asdf if it's not loaded.

	* primitives.lisp (*new-frame-action*): new global

	* core.lisp (choose-new-frame-window): new function
	(split-frame): call choose-new-frame-window. show the new frame's
	window.

2007-04-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (+netwm-supported+): new constant
	(+netwm-window-types+): likewise
	(+wm-take-focus+): remove constant
	(+wm-state+): likewise
	(+wm-protocols+): likewise
	(+wm-delete-window+): likewise
	(utf8-to-string): new function

	* core.lisp (send-selection): pass args to change-property
	properly.
	(translate-id): replace unknown chars with ?
	(xwin-net-wm-name): new function
	(xwin-name): call xwin-net-wm-name
	(default-border-width-for-type): handle :dialog type
	(gravity-for-window): likewise
	(xwin-type): return supported netwm types
	(xwin-strut): newfunction
	(delete-window): intern the atom