@@ -37,15 +37,15 @@
 	  (define-key m (kbd "C-c") "exec xterm")
 	  (define-key m (kbd "e") "exec emacs")
 	  (define-key m (kbd "C-e") "exec emacs")
-	  (define-key m (kbd "n") "next")
-	  (define-key m (kbd "C-n") "next")
-	  (define-key m (kbd "M-n") "pull-hidden-next")
+	  (define-key m (kbd "n") "pull-hidden-next")
+	  (define-key m (kbd "C-n") "pull-hidden-next")
+	  (define-key m (kbd "M-n") "next")
 	  (define-key m (kbd "C-M-n") "next-in-frame")
-	  (define-key m (kbd "SPC") "next")
-	  (define-key m (kbd "C-SPC") "next")
-	  (define-key m (kbd "p") "prev")
-	  (define-key m (kbd "C-p") "prev")
-	  (define-key m (kbd "M-p") "pull-hidden-previous")
+	  (define-key m (kbd "SPC") "pull-hidden-next")
+	  (define-key m (kbd "C-SPC") "pull-hidden-next")
+	  (define-key m (kbd "p") "pull-hidden-previous")
+	  (define-key m (kbd "C-p") "pull-hidden-previous")
+	  (define-key m (kbd "M-p") "prev")
 	  (define-key m (kbd "C-M-p") "prev-in-frame")
 	  (define-key m (kbd "w") "windows")
 	  (define-key m (kbd "C-w") "windows")
@@ -58,8 +58,8 @@
 	  (define-key m (kbd "C-a") "time")
 	  (define-key m (kbd "'") "select")
 	  (define-key m (kbd "\"") "windowlist")
-	  (define-key m (kbd "C-t") "other-in-frame")
-	  (define-key m (kbd "M-t") "pull-hidden-other")
+	  (define-key m (kbd "C-t") "pull-hidden-other")
+	  (define-key m (kbd "M-t") "other-in-frame")
 	  (define-key m (kbd "!") "exec")
 	  (define-key m (kbd "C-g") "abort")
 	  (define-key m (kbd "0") "pull 0")
